add people flow

--- a/app/cards-add-new.html
+++ b/app/cards-add-new.html
@@ -119,7 +119,7 @@
             </header>
             <nav  aria-label="breadcrumb" class="py-5">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item txt bigger p-0 medium"><a href="#">Cards</a></li>
+                <li class="breadcrumb-item txt bigger p-0 medium"><a href="#" class="d-inline-block">Cards</a></li>
                 <li class="breadcrumb-item txt bigger p-0 medium active" aria-current="page">Add New Card</li>
               </ol>
             </nav>
