--- a/html/people-details.html
+++ b/html/people-details.html
@@ -121,71 +121,208 @@
             <nav  aria-label="breadcrumb" class="py-5">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item txt bigger p-0 medium"><a href="#" class="d-inline-block">Cards</a></li>
-                <li class="breadcrumb-item txt bigger p-0 medium active" aria-current="page">Card  * 4796</li>
+                <li class="breadcrumb-item txt bigger p-0 medium active" aria-current="page">Madis Aasla</li>
               </ol>
             </nav>
-            <ul class="card-detail-tabs mb-5">
-              <li class="mx-auto"><a href="javascript:;" class="p-3 txt bigger semi-bold uppercase">Overview</a></li>
-              <li class="mx-auto"><a href="javascript:;" class="p-3 txt bigger semi-bold uppercase">Card limits</a></li>
-              <li class="mx-auto"><a href="javascript:;" class="p-3 txt bigger semi-bold uppercase">Card Control</a></li>
-              <li class="mx-auto active"><a href="javascript:;" class="p-3 txt bigger semi-bold uppercase">Expenses</a></li>
-              <li class="mx-auto"><a href="javascript:;" class="p-3 txt bigger semi-bold uppercase">Transfers</a></li>
-            </ul>
-            
-
-            <div class="py-md-5 fit-height-listing">
-              <div class="row mb-5">
-                <div class="col-lg-2 mb-2 mb-lg-0 pe-lg-0">
-                  <div class="grey-box filter h-100 py-3">
-                    <p class="txt half-opacity text-start small">Person</p>
-                    <div class="dropdown p-relative align-middle">
-                      <button class="txt medium dropdown-toggle no-bg navy px-0 py-2 w-100 text-start" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                        All Transfers
-                      </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
+            <div class="mb-5">
+              <div class="row">
+                <div class="col-6">
+                  <div class="br-commun bgLowWhite overflow-hidden h-100">
+                    <div class="row h-100">
+                      <div class="col-4 border-end p-4 h-100 text-center">
+                        <div class="h1 uppercase white bgPink circle overflow-hidden mx-auto text-center py-2 mb-0">ma</div>
+                        <p class="txt d-inline-block">Madis Aasla</p>
+                        <a href="javascript:;" class="d-inline-block"><img src="images/static/edit-name.svg" alt=""></a>
+                        <p class="txt half-opacity small">System Engineer</p>
+                      </div>
+                      <div class="col-4 border-end p-4 h-100">
+                        <ul>
+                          <li class="d-block mb-3">
+                            <img src="images/static/calendar.svg" alt="" class="me-2 d-inline-block">
+                            <p class="txt d-inline-block">Joined in June 2, 2021</p>
+                          </li>
+                          <li class="d-block mb-3">
+                            <a href="javascript:;">
+                              <img src="images/static/mail.svg" alt="" class="me-2 d-inline-block">
+                              <p class="txt d-inline-block">madis@tmam.io</p>
+                            </a>
+                          </li>
+                          <li class="d-block">
+                            <a href="javascript:;">
+                              <img src="images/static/call.svg" alt="" class="me-2 d-inline-block">
+                              <p class="txt d-inline-block">+1 971 532 2658</p>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="col-4 p-4 h-100">
+                        <ul>
+                          <li class="d-block mb-5">
+                            <p class="txt semi-bold">$ 12,268</p>
+                            <p class="txt half-opacity small">Spent this month</p>
+                          </li>
+                          <li class="d-block">
+                            <p class="txt semi-bold">$ 12,268</p>
+                            <p class="txt half-opacity small">Spent this month</p>
+                          </li>
+                        </ul>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-2 mb-2 mb-lg-0 pe-lg-0">
-                  <div class="grey-box filter h-100 py-3">
-                    <p class="txt half-opacity text-start small">Category</p>
-                    <div class="dropdown p-relative align-middle">
-                      <button class="txt medium dropdown-toggle no-bg navy px-0 py-2 w-100 text-start" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                        All Transfers
-                      </button>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
+                <div class="col-6">
+                  <div class="br-commun bgLowWhite overflow-hidden h-100 p-relative">
+                    <div class="d-flex p-4">
+                      <div class="me-auto">
+                        <p class="txt bigger mb-2 d-block">Balance: <span class="h2 semi-bold mx-2 mb-0">$ 42,100.00</span></p>
+                        <p class="txt half-opacity small">As of May 6, 2021</p>
+                      </div>
+                      <a href="javascript:;" class="btn">
+                        <img src="images/static/transfer.svg" alt="" class="d-inline-block">
+                        <p class="txt white d-none d-md-inline-block mx-2 uppercase">Transfer</p>
+                      </a>
                     </div>
+                    <ul class="d-flex bgLowNavy p-absolute p-2">
+                      <li class="mx-auto">
+                        <p class="d-block mb-0">Company: $ 12,145.00</p>
+                      </li>
+                      <li class="mx-auto">
+                        <p class="d-block mb-0">Department: $ 7,558.00</p>
+                      </li>
+                    </ul>
                   </div>
                 </div>
-                <div class="col-lg-3 mb-2 mb-lg-0 pe-lg-0">
-                  <div class="grey-box filter h-100 py-3 calendar">
-                    <p class="txt half-opacity text-start small">Select Date Range</p>
-                    <div class="input-group w-100">
-                      <input type="text" name="daterange" value="01/01/2018 - 01/15/2018"  class="no-bg navy txt medium border-0 w-80" aria-label="date" aria-describedby="basic-addon2"/>
-                      <span class="input-group-text no-bg flo" id="basic-addon2"><img src="images/static/calendar-pink.svg" alt=""></span>
+              </div>
+            </div>
+            <div class="py-md-5">
+              <div class="row my-3 mb-md-5">
+                <div class="col">
+                  <p class="h1 bold">Cards</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <div class="px-4 py-5 bgNavy br-commun overflow-hidden p-relative card-min-height">
+                    <div class="mb-5">
+                      <p class="txt white d-inline-block semi-bold align-middle">
+                        <span class="small half-opacity uppercase mb-2 d-block regular">Available funds</span>
+                        $42,100</p>
+                      <img src="images/static/chip.svg" alt="" class="float-end card-chip d-inline-block align-middle">
+                    </div>
+                    <div class="mb-5">
+                      <h2 class="white mb-3">John Doe</h2>
+                      <p class="txt white d-inline-block me-2 bigger semi-bold">**** **** ****  4796</p>
+                      <a href="javascript:;" class="d-inline-block"><img src="images/static/copy-number.svg" alt=""></a>
+                    </div>
+                    <div class="mb-5">
+                      <p class="txt white d-inline-block semi-bold align-middle me-5">
+                        <span class="small half-opacity uppercase mb-2 d-block regular">cvv</span>
+                        384</p>
+                        <p class="txt white d-inline-block semi-bold align-middle">
+                          <span class="small half-opacity uppercase mb-2 d-block regular">Exp</span>
+                          02/25</p>
+                    </div>
+                    <div class="mb-0">
+                      <div class="logo-patern">
+                        <img src="images/static/logo-patern.svg" alt="">
+                      </div>
+                      <div class="master-card float-end align-middle">
+                        <img src="images/static/mastercard-colored.svg" alt="" class="my-auto">
+                      </div>
                     </div>
                   </div>
+                  <div class="form-check form-switch d-inline-block me-3 mt-3">
+                    <label class="form-check-label txt" for="flexSwitchCheckDefault3">Freeze</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault3" checked>
+                  </div>
+                  <div class="form-check form-switch d-inline-block me-3 mt-3">
+                    <label class="form-check-label txt" for="flexSwitchCheckDefault4">Block</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault4">
+                  </div>
                 </div>
-                <div class="col-lg-5">
-                  <div class="grey-box filter h-100 py-3">
-                    <p class="txt half-opacity text-start small">Search</p>
-                    <div class="input-group">
-                      <span class="input-group-text no-bg" id="basic-addon1"><img src="images/static/search.svg" alt=""></span>
-                      <input type="text" class="form-control py-0 txt medium no-bg half-opacity" placeholder="type here..." aria-label="search" aria-describedby="basic-addon1">
+                <div class="col-lg-3">
+                  <div class="px-4 py-5 bgNavy br-commun overflow-hidden p-relative card-min-height">
+                    <div class="mb-5">
+                      <p class="txt white d-inline-block semi-bold align-middle">
+                        <span class="small half-opacity uppercase mb-2 d-block regular">Available funds</span>
+                        $42,100</p>
+                      <img src="images/static/chip.svg" alt="" class="float-end card-chip d-inline-block align-middle">
+                    </div>
+                    <div class="mb-5">
+                      <h2 class="white mb-3">John Doe</h2>
+                      <p class="txt white d-inline-block me-2 bigger semi-bold">**** **** ****  4796</p>
+                      <a href="javascript:;" class="d-inline-block"><img src="images/static/copy-number.svg" alt=""></a>
+                    </div>
+                    <div class="mb-5">
+                      <p class="txt white d-inline-block semi-bold align-middle me-5">
+                        <span class="small half-opacity uppercase mb-2 d-block regular">cvv</span>
+                        384</p>
+                        <p class="txt white d-inline-block semi-bold align-middle">
+                          <span class="small half-opacity uppercase mb-2 d-block regular">Exp</span>
+                          02/25</p>
+                    </div>
+                    <div class="mb-0">
+                      <div class="logo-patern">
+                        <img src="images/static/logo-patern.svg" alt="">
+                      </div>
+                      <div class="master-card float-end align-middle">
+                        <img src="images/static/mastercard-colored.svg" alt="" class="my-auto">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-check form-switch d-inline-block me-3 mt-3">
+                    <label class="form-check-label txt" for="flexSwitchCheckDefault3">Freeze</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault3" checked>
+                  </div>
+                  <div class="form-check form-switch d-inline-block me-3 mt-3">
+                    <label class="form-check-label txt" for="flexSwitchCheckDefault4">Block</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault4">
+                  </div>
+                </div>
+                <div class="col-lg-3">
+                  <div class="add-new-card card-min-height p-relative br-commun overflow-hidden">
+                    <a href="javascript:;"></a>
+                    <div class="add-new-content text-center">
+                      <img src="images/static/plus.svg" alt="" class="half-opacity mb-4">
+                      <p class="txt half-opacity">Add New Card</p>
                     </div>
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="py-md-5">
+              <div class="row my-3 mb-md-5">
+                <div class="col">
+                  <p class="h1 bold">Spending</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="p-4 bgWhite br-commun mb-5">
+                  <div class="row mb-3">
+                    <div class="col-auto order-2 order-md-1">
+                      <p class="txt p-2">Spent</p>
+                    </div>
+                    <div class="col-auto ms-md-auto order-1 order-md-2 mb-2 mb-md-0">
+                      <div class="bar-legend d-inline me-2">
+                        <div class="rect d-inline-block me-2 align-middle"></div>
+                        <p class="txt small d-inline-block align-middle">Spent</p>
+                      </div>
+                      <input type="text" name="daterange" value="01/01/2018 - 01/15/2018"  class="navy txt medium border-0 d-inline p-2" aria-label="date"/>
+                    </div>
+                  </div>
+                  <div id="bar-chart" data-colors="#FF0956,#FF0956,#FF0956"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="py-md-5">
+              <div class="row my-3 mb-md-5">
+                <div class="col">
+                  <p class="h1 bold">Transactions</p>
+                </div>
+              </div>
               <div class="row mb-5">
-                <div class="table-wrapper table-responsive">
+                <div class="table-wrapper table-responsive table-transactions">
                   <table class="table align-middle">
                     <thead>
                       <tr>
@@ -219,6 +356,11 @@
                       </tr>
                     </tbody>
                   </table>
+                </div>
+              </div>
+              <div class="row mb-5 justify-content-end">
+                <div class="col-auto">
+                  <a href="javascript:;" class="txt pink medium">View Full List</a>
                 </div>
               </div>
             </div>
@@ -332,7 +474,37 @@
             }
           }
         }) 
+
+
+
+        barChart();
+        $(window).resize(function() {
+          window.barChart.redraw();
+        });
+
       });
+      function barChart() {
+        var labelColor = jQuery('#bar-chart').css('color');
+        window.barChart = Morris.Bar({
+          element: 'bar-chart',
+          data: [
+            { m: 'Jan', a: "900" , b: "1500", c: "2000", d: "3000" },
+            { m: 'Feb', a: "900" , b: "1500", c: "2000", d: "3000" },
+            { m: 'Mar', a: "900" , b: "1500", c: "2000", d: "3000" },
+            { m: 'Apr', a: "900" , b: "1500", c: "2000", d: "3000" },
+            { m: 'May', a: "900" , b: "1500", c: "2000", d: "3000" },
+            { m: 'Jun', a: "900" , b: "4800", c: "2000", d: "3000" },
+          ],
+          xkey: 'm',
+          ykeys: ['a', 'b', 'c', 'd'],
+          labels: ['T1', 'T2', 'T3', 'T4'],
+          lineWidth: '3px',
+          resize: true,
+          redraw: true,
+          gridTextColor: labelColor,
+          barColors: jQuery('#bar-chart').data('colors').split(',')
+        });
+    }
       </script>
 </body>
 </html>
