--- a/html/cards-details-overview.html
+++ b/html/cards-details-overview.html
@@ -120,7 +120,7 @@
             </header>
             <nav  aria-label="breadcrumb" class="py-5">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item txt bigger p-0 medium"><a href="#">Cards</a></li>
+                <li class="breadcrumb-item txt bigger p-0 medium"><a href="#" class="d-inline-block">Cards</a></li>
                 <li class="breadcrumb-item txt bigger p-0 medium active" aria-current="page">Card  * 4796</li>
               </ol>
             </nav>
@@ -182,9 +182,9 @@
                 <div class="col-lg-9">
                   <div class="row mb-4">
                     <div class="col-lg-8">
-                      <div class="br-commun bgLowWhite overflow-hidden">
+                      <div class="br-commun bgLowWhite overflow-hidden p-relative h-100">
                         <p class="txt bigger p-5">Balance: <span class="h2 semi-bold mx-2">$ 42,100.00</span></p>
-                        <ul class="d-flex bgLowNavy p-2">
+                        <ul class="d-flex bgLowNavy p-2 p-absolute">
                           <li class="mx-auto">
                             <p class="d-block mb-0">Company:</p>
                             <p class="d-block mb-0">$ 12,145.00</p>
