--- a/html/cards-details-transfers.html
+++ b/html/cards-details-transfers.html
@@ -120,7 +120,7 @@
             </header>
             <nav  aria-label="breadcrumb" class="py-5">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item txt bigger p-0 medium"><a href="#">Cards</a></li>
+                <li class="breadcrumb-item txt bigger p-0 medium"><a href="#" class="d-inline-block">Cards</a></li>
                 <li class="breadcrumb-item txt bigger p-0 medium active" aria-current="page">Card  * 4796</li>
               </ol>
             </nav>
